--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,10 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <!-- api -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGoAUdN4Y_rg_8MisYlX7Uag5e1aR8Www" async defer></script>
+
 </head>
 
 <body>
